--- a/00_Concept_of_Segmentation.ipynb
+++ b/00_Concept_of_Segmentation.ipynb
@@ -342,6 +342,7 @@
     "- Thinning을 하는 이유는 얇고 선명한 (sharp edge) edge가 객체등의 응용에서 훨씬 유용하기 때문이며, Hough Transform을 이용하여 직선이나 타원 들을 검출할 때도 얇은 경우에 결과가 더 좋게 나오기 때문이며, 때로 edge가 객체의 경계에 위치하고 있는 경우는 객체의 perimeter(둘레)를 구할 때 복잡한 공식을 사용하지 않고도 쉽게 할 수 있기 때문이다. \n",
     "\n",
     "#### thinning은 아래 그림처럼 2종류의 방법을 사용한다.\n",
+    "\n",
     "![img18](./imgs/18.PNG)\n",
     "\n",
     "- 4방향 또는 8방향 방법을 정했다면, 중심 픽셀의 edge 값과 주변 픽셀의 엣지값을 비교하여 중심 픽셀이 가장 큰 값인 경우는 남겨두고 그렇지 않은 경우는 제거하는 방식이다.\n",
@@ -349,6 +350,7 @@
     "- 이를 non-suppression이라고도 부른다.\n",
     "\n",
     "- 예를 들면 왼쪽 이미지에서 thinning을 하면, 맨 왼쪽/위 방향부터 3x3 sliding window를 적용시키면서, 해당 window의 중심값보다 주변값이 큰 경우 중심값을 0 으로 바꿔가는 방식이다.\n",
+    "\n",
     "![img19](./imgs/19.PNG)"
    ]
   },
@@ -591,6 +593,13 @@
     "___ \n",
     "\n",
     "</br>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 출처 : 라온피플 ML Academy https://blog.naver.com/laonple/220873446440"
    ]
   }
  ],
