--- a/01_data_filter.ipynb
+++ b/01_data_filter.ipynb
@@ -13,79 +13,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    file type  patient name  slice               shape\n",
-      "0    CBCT-MCS         김춘구 1    256  (256, 512, 512, 3)\n",
-      "1    CBCT-MCS         천언성 1    512  (512, 512, 512, 3)\n",
-      "2    CBCT-MCS         권세환 1    512  (512, 512, 512, 3)\n",
-      "3    CBCT-MCS         김은식 1    256  (256, 512, 512, 3)\n",
-      "4    CBCT-MCS         정새롬 1    512  (512, 512, 512, 3)\n",
-      "..        ...           ...    ...                 ...\n",
-      "234    MCS 모음    LEE SE JIN    260  (260, 512, 512, 3)\n",
-      "235    MCS 모음         이현무 1    304  (304, 512, 512, 3)\n",
-      "236    MCS 모음  10617376 서동진    174  (174, 512, 512, 3)\n",
-      "237    MCS 모음         유승림 1    255  (255, 512, 512, 3)\n",
-      "238    MCS 모음         이정혁 1    247  (247, 512, 512, 3)\n",
-      "\n",
-      "[239 rows x 4 columns]\n"
-     ]
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "tot_data = pd.read_csv('./data_preview/total.csv')\n",
-    "print(tot_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0      256\n",
-       "1      512\n",
-       "2      512\n",
-       "3      256\n",
-       "4      512\n",
-       "      ... \n",
-       "234    260\n",
-       "235    304\n",
-       "236    174\n",
-       "237    255\n",
-       "238    247\n",
-       "Name: slice, Length: 239, dtype: int64"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tot_data['slice']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "59104\n"
-     ]
-    }
-   ],
-   "source": [
+    "print(tot_data)\n",
+    "\n",
+    "tot_data['slice']\n",
+    "\n",
     "b = 0\n",
     "a = [ b + i for i in tot_data['slice']]\n",
     "print(sum(a))"
@@ -95,7 +35,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 비율 확인"
+    "___\n",
+    "# 비율 확인"
    ]
   },
   {
@@ -104,7 +45,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os"
+    "import os\n",
+    "from utils import *"
    ]
   },
   {
@@ -118,15 +60,6 @@
     "root_path = os.path.join(root, 'Mx Mn')\n",
     "\n",
     "mxmn_path = [os.path.join(root_path, img) for img in sorted(os.listdir(root_path))]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from utils import *"
    ]
   },
   {
@@ -269,7 +202,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## patch 뜯기 \n",
+    "___\n",
+    "# patch 뜯기 \n",
     "\n",
     "### 1. size 48x48"
    ]
@@ -462,7 +396,8 @@
    "source": [
     "</br>\n",
     "\n",
-    "### code testing"
+    "___\n",
+    "# Testing"
    ]
   },
   {
@@ -483,46 +418,6 @@
     "mm_ = load_3d_vol(mxmn_path, 'rgb')\n",
     "\n",
     "mask_mm = make_mask(mm_)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(148, 512, 512, 3)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mask_mm.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(148, 512, 512)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ori_.shape"
    ]
   },
   {
@@ -553,7 +448,12 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -567,8 +467,8 @@
    "source": [
     "x_lists = np.array(x_list)\n",
     "y_lists = np.array(y_list)\n",
-    "print(x_lists.shape)\n",
-    "print(y_lists.shape)"
+    "# print(x_lists.shape)\n",
+    "# print(y_lists.shape)"
    ]
   },
   {
@@ -580,33 +480,6 @@
     "np.save('./data/2d/x_test_size_48.npy', x_lists)\n",
     "np.save('./data/2d/y_test_size_48.npy', y_lists)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 164,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/ryan/project/Segmentation_test'"
-      ]
-     },
-     "execution_count": 164,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%pwd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -625,7 +498,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
