--- a/04_train.ipynb
+++ b/04_train.ipynb
@@ -333,7 +333,9 @@
    "source": [
     "</br>\n",
     "\n",
-    "## Generator\n",
+    "___\n",
+    "\n",
+    "# Generator\n",
     "\n",
     "#### * random fliplr \n",
     "#### * shuffle order"
@@ -677,7 +679,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
