--- a/05_augmentation.ipynb
+++ b/05_augmentation.ipynb
@@ -6646,43 +6646,9 @@
    "outputs": [],
    "source": [
     "train_dir = './data/2d/train'\n",
-    "a = gen(train_dir, 20)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 128,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "a = gen(train_dir, 20)\n",
     "b, c = next(a)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 129,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(20, 48, 48, 1)\n",
-      "(20, 48, 48, 3)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(b.shape)\n",
-    "print(c.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -6832,7 +6798,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
